improv. auto detect converter and optimize code